<resources>
    <string name="app_name">OratioLingo</string>
    <string name="oratiolingo">OratioLingo</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="registrarme">Registrarme</string>
    <string name="videos">Videos</string>
    <string name="juegos">Juegos</string>
    <string name="progreso">Progreso</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="regstrate">¿No estas registrado? Registrate</string>
    <string name="examen_de_nivel">Examen de nivel</string>
    <string name="pon_a_prueba_tus_conocimientos">Pon a prueba tus conocimientos</string>
    <string name="niveles">Niveles</string>
    <string name="ingrese_su_correo_electr_nico">Ingrese su correo electrónico</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña:</string>
    <string name="confirmar_contrase_a">Confirmar contraseña:</string>
    <string name="registrarmebotn">Registrarme</string>
    <string name="deseas_cerrar_sesi_n">¿Deseas cerrar sesión?</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="_3">3</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="nombre">Nombre</string>
    <string name="poro_lolero">Poro lolero</string>
    <string name="test_correotest_cl">test@correotest.cl</string>
    <string name="correo">Correo</string>
    <string name="fecha_de_creaci_n">Fecha de creación</string>
    <string name="se_uni_por_primera_vez_el_10_de_febrero_del_2020">Se unió por primera vez el 10 de febrero del 2020</string>
    <string name="preferencias">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="tema_nocturno">Tema nocturno</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
</resources>